--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 
   body {
     font-family: 'Google Sans', system-ui, -apple-system, sans-serif;
-    @apply bg-bosdm-sky text-slate-800;
+    @apply bg-brand-gray-50 text-slate-800;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
